# AoT-Fun

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: main_fragment.glsl  main_vertex.glsl
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: App.cpp  App.h  GameTemplate2D.cpp  GameTemplate2D.h  main.cpp
src/core/gl/: CMakeLists.txt  Context.cpp  Context.h  Window.cpp  Window.h
src/core/gl/Objects/: Drawable.cpp  Drawable.h  Mesh.h
src/core/gl/Shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
src/core/style/: BaseColors.h
src/core/systems/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
src/core/systems/Input/: InputState.h  InputSystem.cpp  InputSystem.h
src/engine/2DGraphics/: Rectangle.cpp  Rectangle.h  WorldObject.h
src/engine/core/2DGraphics/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  WorldObject.h
src/engine/core/gl/: CMakeLists.txt  Window.cpp  Window.h
src/engine/core/gl/Objects/: Material.h  Mesh.cpp  Mesh.h
src/engine/core/gl/Shader/: Shader.h  ShaderManager.cpp
src/engine/core/gl/Texture/: Texture2D.cpp  Texture2D.h
src/engine/core/style/: CMakeLists.txt
src/engine/core/systems/: CMakeLists.txt
src/engine/core/systems/Input/: InputKeyMapping.h  InputKeys.h
src/engine/shapes/: CMakeLists.txt  CircleShape.h  EllipseShape.h  LineShape.h  PolygonShape.h  RectangleShape.h  RingShape.h  Shape2D.cpp  Shape2D.h  TriangleShape.h  WorldObject.h
src/engine/systems/Render/: RenderContext.h  RenderTypes.h  Renderer.cpp  Renderer.h
src/engine/utils/: CMakeLists.txt  Utils.cpp  Utils.h
